# bayer-demosaicing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Demosaic.cpp  Demosaic.h  README.md  main.cpp
